feat(web): standardize error responses via GlobalExceptionHandler
- Add consistent JSON error shape (code, message, fieldErrors)
- Map @Valid body errors, param/type errors → 400
- Map data constraint violations → 409
- Keep VehicleNotFoundException → 404; add 500 fallback